--- a/public/Css/style.css
+++ b/public/Css/style.css
@@ -150,6 +150,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    color: black;
 }
 
 .dropdown-content a {
@@ -202,10 +203,35 @@
     flex-direction: column;
 }
 
+main{
+    display: flex;
+    justify-content: center;
+    padding-bottom: 15%;
+}
+
 .footer{
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: end;
+    position: relative;
+    bottom: 0;
+    text-shadow: 2px 2px 9px rgba(0,0,0,0.73);
+}
+
+.svgFooter{
+    position: absolute;
+    width: 100%;
+    overflow: hidden;
+    z-index: -1;
+}
+
+.information{
+    margin-bottom: 75px;
+}
+
+.information a {
+    color: white;
+    text-decoration: none;
 }
 
 .dropdown:hover .dropdown-content{
@@ -630,6 +656,19 @@
     transition: 0.3s;
 }
 
+.popUpAjoutPanier{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, 0);
+    background-color: #B5CB99;
+    padding: 20px;
+    border: 2px solid #556B2F;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    z-index: 2;
+}
+
 .close:hover,
 .close:focus {
     color: #bbb;
@@ -928,7 +967,6 @@
     background-color: #FF8080;
     border-radius: 5px;
     text-decoration: none;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     transition: ease-out 0.2s;
     box-shadow: inset 0 0 0 0 white;
     outline: none;
@@ -946,7 +984,6 @@
     background-color: #95BDFF;
     border-radius: 5px;
     text-decoration: none;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     transition: ease-out 0.2s;
     box-shadow: inset 0 0 0 0 white;
     outline: none;
@@ -964,7 +1001,6 @@
     background-color: #B5CB99;
     border-radius: 5px;
     text-decoration: none;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     transition: ease-out 0.2s;
     box-shadow: inset 0 0 0 0 white;
     outline: none;
@@ -993,4 +1029,180 @@
 .btnPanierPlus:hover{
     box-shadow: inset 25px 0 0 0 white;
     color: #B5CB99;
+}
+
+/* ***************************************************Profile page********************************************************** */
+.profileContainer {
+    display: flex;
+    width: 95%;
+    flex-direction: row;
+}
+
+.profileAside {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 20%;
+}
+
+.figureAsideProfile {
+    border: #77562E solid 2px;
+    border-radius: 10px;
+}
+
+.figureAsideProfile img {
+    width: 350px;
+    height: 350px;
+}
+
+.profileInfos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border-radius: 10px;
+    width: 100%;
+}
+
+.profileInfosTitre {
+    background-color: #EAC696;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px 10px 0px 0px;
+}
+
+.profileInfos span {
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
+
+.profileMain {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 70%;
+    margin-left: 7%;
+}
+
+.profileTextArea {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: baseline;
+    width: 100%;
+}
+
+.sousProfileTextArea{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.sousProfileTextAreaAdresse {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    border-radius: 10px;
+    margin-top: 1%;
+    margin-bottom: 2%;
+
+}
+
+.sousProfileTextAreaAdresseTitre {
+    background-color: #EAC696;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px 10px 0px 0px;
+}
+
+.textAreaAdresse{
+    padding: 10px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.duoTextArea {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.textArea {
+    border: #65451F solid 2px;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    resize: none;
+    font-size: 20px;
+    width: 100%;
+    border-radius: 20px;
+    padding-left: 12px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+}
+
+.textAreaLittle{
+    border: #65451F solid 2px;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    resize: none;
+    font-size: 20px;
+    width: 45%;
+    border-radius: 20px;
+    padding-left: 12px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+}
+
+.boutonAdresse {
+    cursor: pointer;
+    font-size: 16px;
+    width: 60%;
+    border: #65451F solid 2px;
+    background-color: #65451F;
+    color: white;
+    border-radius: 15px;
+    margin-bottom: 2%;
+    transition: ease-out 0.4s;
+    box-shadow: inset 0 0 0 0 white;
+    outline: none;
+}
+
+.btnEdit{
+    text-decoration: none;
+    background-color: #95BDFF;
+    border: #95BDFF solid 2px;
+    color: white;
+    font-size: 20px;
+    height: 30px;
+    width: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    transition: ease-out 0.2s;
+    box-shadow: inset 0 0 0 0 white;
+    outline: none;
+}
+
+.asideBtnEdit {
+    display: flex;
+    justify-content: center;
+    width: 5%;
+}
+
+.boutonAdresse:hover{
+    box-shadow: inset 700px 0 0 0 white;
+    color: #65451F;
+}
+
+.btnEdit:hover{
+    box-shadow: inset 30px 0 0 0 white;
+    color: #95BDFF;
 }
