--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -108,6 +108,7 @@
             <script src="{{ asset('Js/appSeeMore.js')}}"></script>
             <script src="{{ asset('Js/appModal.js')}}"></script>
             <script src="{{ asset('Js/popUpArticlePanier.js')}}"></script>
+            <script src="{{ asset('Js/VoirPlusAdresse.js')}}"></script>
         {% endblock %}
     </body>
 </html>
