--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -34,7 +34,7 @@
         <div class="achat">
             <h2>Total</h2>
             <span class="prix"> {{ total }} €</span>
-            <a href="" class="btnAddPanier">Commander</a>
+            <a href="{{ path('livraison_cart')}}" class="btnAddPanier">Commander</a>
             <a href="{{ path('empty_cart')}}" class="descriptif">vider le panier</a>
         </div>
     </div>
